--- a/vuelos.html
+++ b/vuelos.html
@@ -229,16 +229,16 @@
         const primeraHoraSalida = new Date(ahora);
         primeraHoraSalida.setMinutes(ahora.getMinutes() + 40);
         
-        // Datos de vuelos con precios en pesos chilenos (CLP)
+        // Datos de vuelos con precios en pesos colombianos (COP) entre 49,999 y 55,000
         const vuelos = [
-            { precio: "26.500", moneda: "CLP", operador: null },
-            { precio: "29.800", moneda: "CLP", operador: null },
-            { precio: "34.900", moneda: "CLP", operador: null },
-            { precio: "31.900", moneda: "CLP", operador: null },
-            { precio: "25.500", moneda: "CLP", operador: null },
-            { precio: "28.700", moneda: "CLP", operador: null },
-            { precio: "33.500", moneda: "CLP", operador: "img/clic.svg" },
-            { precio: "27.900", moneda: "CLP", operador: null }
+            { precio: "49.999", moneda: "COP", operador: null },
+            { precio: "51.500", moneda: "COP", operador: null },
+            { precio: "54.900", moneda: "COP", operador: null },
+            { precio: "52.900", moneda: "COP", operador: null },
+            { precio: "50.500", moneda: "COP", operador: null },
+            { precio: "53.700", moneda: "COP", operador: null },
+            { precio: "55.000", moneda: "COP", operador: "img/clic.svg" },
+            { precio: "51.900", moneda: "COP", operador: null }
         ];
         
         // Contenedor para las tarjetas de vuelo
